--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <section class="about-us-section1">
-      <div class="about-us1">
+      <div class="about-details about-us1">
         <div class= "bg-img about-us1-img"></div>
         <div class="about-us1-content">
           <h4>Bootstrap v3.3.6</h4>
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="about-us2">
+      <div class="about-details about-us2">
         <div class= "bg-img about-us2-img"></div>
         <div class="about-us2-content">
           <h4>Responsive Design</h4>
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="about-us3">
+      <div class="about-details about-us3">
         <div class= "bg-img about-us3-img"></div>
         <div class="about-us3-content">
           <h4>Parallax Layout</h4>
@@ -58,8 +58,8 @@
     </section>
 
     <section class="about-us-section2">
-      <div class="about-us4">
-        <div class="about-us4-img"></div>
+      <div class="about-columns about-us4">
+        <div class="about-columns-img about-us4-img"></div>
         <div class="about-us4-content">
           <h4>Two Column Left Side</h4>
           <p>
@@ -70,8 +70,8 @@
       </div>
 
       <div class="about-us5">
-        <div class="about-us5-img"></div>
-        <div class="about-us5-content">
+        <div class="about-columns-img about-us5-img"></div>
+        <div class="about-columns about-us5-content">
           <h4>Two Column Right Side</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. <br>
@@ -87,16 +87,16 @@
     </div>
 
     <section class="our-services-columns">
-      <div class="column1">
-        <div class="column1-img"></div>
+      <div class="column column1">
+        <div class="column-img column1-img"></div>
         <div class="column1-content">
           <h3>Column One</h3>
           <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
         </div>
       </div>
 
-      <div class="column2">
-        <div class="column2-img"></div>
+      <div class="column column2">
+        <div class="column-img column2-img"></div>
         <div class="column2-content">
           <h3>Column Two</h3>
           <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
@@ -104,16 +104,16 @@
         </div>
       </div>
 
-      <div class="column3">
-        <div class="column3-img"></div>
+      <div class="column column3">
+        <div class="column-img column3-img"></div>
         <div class="column3-content">
           <h3>Column Three</h3>
           <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
         </div>
       </div>
 
-      <div class="column4">
-        <div class="column4-img"></div>
+      <div class="column column4">
+        <div class="column-img column4-img"></div>
         <div class="column4-content">
           <h3>Column Four</h3>
           <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
